0x07-python-test_driven_development/tests/0-add_integer.txt
The ``0-add_integer`` module
======================

Using ``add_integer``
-------------------

This is an example text file in reStructuredText format.  First import
``add_integer`` from the ``0-add_integer`` module:
    >>> add_integer = __import__('0-add_integer').add_integer
    >>> add_integer(2, 3)
    5
    >>> add_integer(2, 10)
    12
    >>> add_integer(-2, 10)
    8
    >>> add_integer(-2, 10.3)
    8
    >>> add_integer(-2, 111.4)
    109
    >>> add_integer(-2.4, 111.4)
    109
    >>> add_integer(2, "str")
    Traceback (most recent call last):
        ...
    TypeError: b must be an integer
    >>> add_integer(35, {})
    Traceback (most recent call last):
        ...
    TypeError: b must be an integer
    >>> add_integer(35, [])
    Traceback (most recent call last):
        ...
    TypeError: b must be an integer
    >>> add_integer(35, ())
    Traceback (most recent call last):
        ...
    TypeError: b must be an integer
    >>> add_integer(35, (45,))
    Traceback (most recent call last):
        ...
    TypeError: b must be an integer
    >>> add_integer()
    Traceback (most recent call last):
        ...
    TypeError: add_integer() missing 1 required positional argument: 'a'
    >>> x = float("nan")
    >>> add_integer(x)
    Traceback (most recent call last):
        ...
    ValueError: cannot convert float NaN to integer
    >>> add_integer(1.7976931348623157e+308*2)
    Traceback (most recent call last):
        ...
    OverflowError: cannot convert float infinity to integer
    >>> add_integer(,)
    Traceback (most recent call last):
        ...
        add_integer(,)
                    ^
    SyntaxError: invalid syntax
    >>> add_integer( , )
    Traceback (most recent call last):
        ...
        add_integer( , )
                    ^
    SyntaxError: invalid syntax